# rc_controllers

./: README.md
action_controller/: CMakeLists.txt  action_controller_plugins.xml  package.xml
action_controller/include/action_controller/: action_controller.h
action_controller/src/: action_controller.cpp
action_controller/test/: test_action_controller.launch  test_action_controller.yaml
chassis_controllers/: CMakeLists.txt  chassis_controllers_plugins.xml  package.xml
chassis_controllers/include/chassis_controllers/: chassis_base.h  omni.h  swerve.h
chassis_controllers/src/: chassis_base.cpp  omni.cpp  swerve.cpp
chassis_controllers/test/: test_omni.launch  test_omni.yaml  test_swerve.launch  test_swerve.yaml
gimbal_controller/: CMakeLists.txt  gimbal_controller_plugins.xml  package.xml
gimbal_controller/include/gimbal_controller/: gimbal_base.h
gimbal_controller/src/: gimbal_base.cpp
gimbal_controller/test/: gimbal_config_template.yaml  load_controllers.launch
rc_gimbal_controller/: CMakeLists.txt  package.xml  rc_gimbal_controller_plugins.xml
rc_gimbal_controller/include/rc_gimbal_controller/: gimbal_base.h
rc_gimbal_controller/src/: gimbal_base.cpp
rc_gimbal_controller/test/: gimbal_config_template.yaml  load_controllers.launch
rc_shooter_controller/: CMakeLists.txt  package.xml  rc_shooter_controller_plugins.xml
rc_shooter_controller/include/rc_shooter_controller/: rc_shooter_controller.h
rc_shooter_controller/src/: rc_shooter_controller.cpp
rc_shooter_controller/test/: load_controller.launch  rc_shooter_controller_template.yaml
