<?xml version="1.0"?>
<package format="2">
    <name>action_controller</name>
    <version>0.0.0</version>
    <description>The action_controller package</description>

    <maintainer email="muyuexin@todo.todo">muyuexin</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rc_common</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>controller_interface</depend>
    <depend>realtime_tools</depend>
    

    <export>
        <controller_interface plugin="${prefix}/action_controller_plugins.xml"/>
    </export>
</package>
