<?xml version="1.0"?>
<package format="2">
    <name>chassis_controllers</name>
    <version>0.0.0</version>
    <description>The chassis_controllers package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="myx@todo.todo">myx</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>BSD</license>


    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>

    <depend>rc_common</depend>

    <depend>controller_interface</depend>
    <depend>effort_controllers</depend>
    <depend>tf2_geometry_msgs</depend>

    <export>
        <controller_interface plugin="${prefix}/chassis_controllers_plugins.xml"/>
    </export>
</package>
