<?xml version="1.0"?>
<package format="2">
  <name>rc_shooter_controller</name>
  <version>0.0.0</version>
  <description>The rc_shooter_controller package</description>

  <maintainer email="jialonglong@todo.todo">jialonglong</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>rc_msgs</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>effort_controllers</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/rc_shooter_controller_plugins.xml"/>
  </export>
</package>
